--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ li {
 
 p {
     font-family: 'Roboto', sans-serif;
-    color: #abadbe;
+    color: #5f5f5f;
     font-size: 15px;
     font-weight: 500;
     margin-top: 0;
